commented out middle section
it was kinda useless

--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@ The header element has a class of nav-bar and an id header which gives it full w
                 </div><!--end of wrapper div-->
             </div><!--end of tag-line container-->
         </section><!--end of banner div section-->
-        <section class="wrapper flex-container"><!--Beginning of section to hold articles-->
-            <div class="flex-wrap featured-articles"><!-- These are the featured articles.  The image is set in the CSS -->
-                <article id="article-1">
-                </article>
-                <article id="article-2">
-                </article>
-                <article id="article-3">
-                </article>
-                <article id="article-4">
-                </article>
-            </div>
-        </section><!-- End of featured articles section -->
+        <!--<section class="wrapper flex-container">&lt;!&ndash;Beginning of section to hold articles&ndash;&gt;-->
+            <!--<div class="flex-wrap featured-articles">&lt;!&ndash; These are the featured articles.  The image is set in the CSS &ndash;&gt;-->
+                <!--<article id="article-1">-->
+                <!--</article>-->
+                <!--<article id="article-2">-->
+                <!--</article>-->
+                <!--<article id="article-3">-->
+                <!--</article>-->
+                <!--<article id="article-4">-->
+                <!--</article>-->
+            <!--</div>-->
+        <!--</section>&lt;!&ndash; End of featured articles section &ndash;&gt;-->
         <section class="module content wrapper">
             <div class="container blog-articles" id="myDiv"> <!-- This is the blog articles section -->
                 <article> <!-- Articles are dummy articles, which are filled in with real blog data in the blogger.js file -->
