--- a/fake-paper-shadow.html
+++ b/fake-paper-shadow.html
@@ -5,13 +5,13 @@
         div {
             width: 300px;
             height: 100px;
-            background-color: yellow;
+            background-color: white;
             box-shadow: 10px 10px 30px #888888;
         }
         div:hover {
             width: 300px;
             height: 100px;
-            background-color: yellow;
+            background-color: white;
             box-shadow: 1px 1px 5px #888888;
         }
     </style>
