--- a/fake-paper-shadow.html
+++ b/fake-paper-shadow.html
@@ -8,6 +8,12 @@
             background-color: white;
             box-shadow: 10px 10px 30px #888888;
         }
+        div:nth-child(2){
+            box-shadow: 5px 5px 15px #888888;
+        }
+        div:nth-child(3){
+            box-shadow: 2px 2px 7px #888888;
+        }
         div:hover {
             width: 300px;
             height: 100px;
